<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Umpire Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="strike_count">0</string>
    <string name="ball_count">0</string>
    <string name="outs_count">0</string>
    <string name="strike_label">Strike:</string>
    <string name="ball_label">Ball:</string>
    <string name="outs_label">Outs:</string>
    <string name="strike_button_label">Strike</string>
    <string name="ball_button_label">Ball</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Umpire Buddy by Min Xiong</string>

</resources>